# SO1_Proyecto1_201403624_containers

./: README.md  docker-compose.yml
golang-server/: main.go  main.go.save  main.go.save.1  memoria.html
python-server/: Dockerfile  Server.py
python-server/templates/: index.html
rust-server/: Cargo.toml  Dockerfile
rust-server/src/: main.rs
rust-server/src/static_root/: index.html
rust-server/templates/: index.html.tera
