[package]
name = "rust_http_server"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
redis = "0.8.0"
rocket = { path = "core/lib" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
path = "contrib/lib"
default-features = false
features = ["tera_templates"]
